--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -724,6 +724,7 @@ a:hover {
 	font-family: "Lucida Grande", Verdana, sans-serif;
 	font-size: 14px;
 	color: #333;
+	white-space: nowrap;
 	}
 	
 	
