--- a/nimbus/media/css/backup.css
+++ b/nimbus/media/css/backup.css
@@ -37,3 +37,10 @@
     background: #FFB;
     margin-bottom: 20px;
 }
+
+.tree {
+    padding-left: 20px !important;
+    margin-bottom: 20px;
+}
+
+.tree li { padding-left: 30px }
