--- a/nimbus/schedules/templates/base_schedules.html
+++ b/nimbus/schedules/templates/base_schedules.html
@@ -13,10 +13,10 @@
 			<div class="bheadl"></div>
 			<div class="bheadr"></div>
 
-			<h2 style="font-size: 1.2em">
+			<h2>
 			    Editar agendamento
 			</h2>
-		</div>		<!-- .block_head ends -->
+		</div>
 
 		<div class="block_content">
 
